# mlwatcher

./: .gitignore  LICENCE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
mlwatcher/: __init__.py  log_file.py  log_reader.py  logger.py  server.py
mlwatcher/templates/: index.html
tests/: test_log_writer.py
